# PluginManager

./: .gitignore  PKG-INFO  README.md  pyproject.toml
kangelpluginsmanager/: __init__.py  methods.py  plugin.py  sbroka.py
kangelpluginsmanager/assests/: bages.json  locale.json
